crypto names and rates API added